# generate-known

./: CMakeLists.txt  README.md  main.cpp  script.py
A/: CMakeLists.txt
diagrams/: multiple.graphml  nodeps.graphml  origin.graphml  parallel.graphml  subdir-add-dep.graphml  subdir-add-gen.graphml  subdir-nodeps.graphml  subdirectory.graphml  target-level.graphml
